# ImageProcessigLibrary

./: .gitignore  CMakeLists.txt  LICENSE  README.md  erik.pgm  extra_credit_assignment.txt  requirements.txt
src/: BrightnessContrast.cpp  BrightnessContrast.h  Convolution.cpp  Convolution.h  Drawing.cpp  Drawing.h  GammaCorrection.cpp  GammaCorrection.h  GaussianBlur.cpp  GaussianBlur.h  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  MeanBlur.cpp  MeanBlur.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Size.h  SobelFilter.cpp  SobelFilter.h  main.cpp
